config/clusters/aks-lts-prow/manifests/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: prow
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      nodeSelector:
        agentpool: prow
      containers:
      - name: minio
        image: minio/minio:RELEASE.2022-02-24T22-12-01Z # https://github.com/minio/minio/pull/14418
        args:
        - gateway
        - azure
        - --console-address=0.0.0.0:8003
        ports:
        - containerPort: 9000
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          periodSeconds: 20
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: prow
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9000
    protocol: TCP
  selector:
    app: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: prow
spec:
  type: NodePort
  ports:
  - port: 8003
    targetPort: 8003
    protocol: TCP
  selector:
    app: minio
